Version 9.0.5 started.
#13#: Code refactored to support JDK9+.